# Tactigon-Shape

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile_hidden  README.md  cfg_test.yaml  create_package.sh  docker-compose.jetson.yml  docker-compose.yml  docker-requirements.txt  docker-setup.sh  docker.py  dockerLLM.md  install.bat  install.sh  install_package.sh  main.py  passaggi.md  release_5203.md  requirements.txt  ros_install.sh  start.bat  start.sh  start_host.sh  test.py  test.sh  test2.py  test3.py  test4.py  test_1_ironboy.py  test_2_ironboy_interface.py  test_3_shape_function  test_4_program_shape.py
.github/workflows/: branch-flow-check.yml  docker-publish.yml
config/: config.json
config/file_manager/: config.json
config/ironBoy/: config.json
config/ros2/parameters/: cfg_test.yaml
config/shapes/: config.json  init_state.json
config/zion/: config.json
docs/: CHANGELOG.md  Contributing.md  Docs.md  Home.md  Introduction.md  Solutions.md  dockerLLM.md
docs/wiki/: Docs.md  Exercises.md  Getting-Started.md  dockerLLM.md
release_files/: create_package.sh  install.sh  start.sh
ros/msgs/camera_tracking_msgs/: CMakeLists.txt  package.xml
speech/: Dockerfile  config.json  tactigon_speech_socket-5.5.0.3-cp37-cp37m-manylinux_2_17_aarch64.whl
tactigon_shapes/: __init__.py  __main__.py  config.py  main.py  models.py  utility.py
tactigon_shapes/extensions/: base.py
tactigon_shapes/templates/: base.jinja  error.jinja  info.jinja  settings.jinja
tactigon_shapes/utils/: __init__.py  extensions.py  request_utils.py
(+117 files in other folders)
